--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -322,8 +322,8 @@ p {
     /*font-size: 0.1rem;*/
     /*font-weight: 100;*/
     display: inline-block;
-    /*border-radius: 1rem;*/
-    /*padding: 0.1rem 0.6rem;*/
+    border-radius: 1rem;
+    padding: 0.1rem 0.6rem;
 }
 
 
