deploy: 84459e8fb370105e3b09c619b5027243b49ca58c

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -319,8 +319,8 @@ p {
 }
 
 .badge {
-    /*font-size: 0.1rem;*/
-    /*font-weight: 100;*/
+    font-size: 0.1rem;
+    font-weight: 100;
     display: inline-block;
     border-radius: 1rem;
     padding: 0.1rem 0.6rem;
