deploy: 7dd6a0505885a52eac76cddc98fdbcf99e57a6ed

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -326,6 +326,10 @@ p {
     padding: 0.1rem 0.6rem;
 }
 
+.arobase::before {
+    content: "\000040";
+}
+
 
 /* Extra small devices (phones, less than 768px) */
 
