--- a/assets/css/styles-6.css
+++ b/assets/css/styles-6.css
@@ -320,6 +320,11 @@ p {
 
 .badge {
     background-color: #4B6A78;
+    font-size: 0.1rem;
+    font-weight: 100;
+    display: inline-block;
+    border-radius: 1rem;
+    padding: 0.1rem 0.6rem;
 }
 
 
